projects/chd/incident/k8s-config/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: incident
  name: incident
  namespace: chd-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident
  template:
    metadata:
      labels:
        app: incident
    spec:
      containers:
        - image: registry.coherent.in/chd-incident:392
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: incident
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            failureThreshold: 30
            periodSeconds: 10
      imagePullSecrets:
      - name: registry-regcred
