projects/chd/incident/k8s-config/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: incident
  name: incident-svc
  namespace: chd-prod
spec:
  ports:
    - port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: incident
